src/cli/freenas/cli/parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> stmt_list
Rule 1     stmt_list -> stmt_redirect
Rule 2     stmt_list -> stmt_redirect NEWLINE
Rule 3     stmt_list -> stmt_redirect NEWLINE stmt_list
Rule 4     stmt_list -> NEWLINE stmt_list
Rule 5     stmt_redirect -> stmt
Rule 6     stmt_redirect -> stmt REDIRECT ATOM
Rule 7     stmt_redirect -> stmt REDIRECT STRING
Rule 8     stmt -> if_stmt
Rule 9     stmt -> for_stmt
Rule 10    stmt -> while_stmt
Rule 11    stmt -> assignment_stmt
Rule 12    stmt -> function_definition_stmt
Rule 13    stmt -> return_stmt
Rule 14    stmt -> break_stmt
Rule 15    stmt -> undef_stmt
Rule 16    stmt -> command
Rule 17    stmt -> call
Rule 18    stmt -> shell
Rule 19    block -> LBRACE stmt_list RBRACE
Rule 20    block -> LBRACE NEWLINE stmt_list RBRACE
Rule 21    block -> LBRACE NEWLINE RBRACE
Rule 22    block -> LBRACE RBRACE
Rule 23    if_stmt -> IF LPAREN expr RPAREN block
Rule 24    if_stmt -> IF LPAREN expr RPAREN block ELSE block
Rule 25    for_stmt -> FOR LPAREN ATOM IN expr RPAREN block
Rule 26    for_stmt -> FOR LPAREN ATOM COMMA ATOM IN expr RPAREN block
Rule 27    while_stmt -> WHILE LPAREN expr RPAREN block
Rule 28    assignment_stmt -> ATOM ASSIGN expr
Rule 29    assignment_stmt -> subscript_left ASSIGN expr
Rule 30    function_definition_stmt -> FUNCTION ATOM LPAREN RPAREN block
Rule 31    function_definition_stmt -> FUNCTION ATOM LPAREN function_argument_list RPAREN block
Rule 32    function_definition_stmt -> FUNCTION ATOM LPAREN RPAREN NEWLINE block
Rule 33    function_definition_stmt -> FUNCTION ATOM LPAREN function_argument_list RPAREN NEWLINE block
Rule 34    function_argument_list -> ATOM
Rule 35    function_argument_list -> ATOM COMMA function_argument_list
Rule 36    return_stmt -> RETURN
Rule 37    return_stmt -> RETURN expr
Rule 38    break_stmt -> BREAK
Rule 39    undef_stmt -> UNDEF ATOM
Rule 40    expr_list -> expr
Rule 41    expr_list -> expr COMMA expr_list
Rule 42    expr -> symbol
Rule 43    expr -> literal
Rule 44    expr -> array_literal
Rule 45    expr -> dict_literal
Rule 46    expr -> unary_expr
Rule 47    expr -> binary_expr
Rule 48    expr -> call
Rule 49    expr -> subscript_expr
Rule 50    expr -> anon_function_expr
Rule 51    expr -> expr_expansion
Rule 52    expr -> LPAREN expr RPAREN
Rule 53    expr -> COPEN expr RBRACE
Rule 54    expr_expansion -> EOPEN command RPAREN
Rule 55    array_literal -> LBRACKET RBRACKET
Rule 56    array_literal -> LBRACKET expr_list RBRACKET
Rule 57    dict_literal -> LBRACE RBRACE
Rule 58    dict_literal -> LBRACE NEWLINE RBRACE
Rule 59    dict_literal -> LBRACE dict_pair_list RBRACE
Rule 60    dict_pair_list -> dict_pair
Rule 61    dict_pair_list -> dict_pair COMMA dict_pair_list
Rule 62    dict_pair -> expr COLON expr
Rule 63    dict_pair -> NEWLINE expr COLON expr
Rule 64    dict_pair -> NEWLINE expr COLON expr NEWLINE
Rule 65    literal -> NUMBER
Rule 66    literal -> HEXNUMBER
Rule 67    literal -> BINNUMBER
Rule 68    literal -> OCTNUMBER
Rule 69    literal -> STRING
Rule 70    literal -> TRUE
Rule 71    literal -> FALSE
Rule 72    literal -> NULL
Rule 73    symbol -> ATOM
Rule 74    call -> ATOM LPAREN RPAREN
Rule 75    call -> ATOM LPAREN expr_list RPAREN
Rule 76    subscript_left -> subscript_left LBRACKET expr RBRACKET
Rule 77    subscript_left -> symbol LBRACKET expr RBRACKET
Rule 78    subscript_expr -> expr LBRACKET expr RBRACKET
Rule 79    anon_function_expr -> FUNCTION LPAREN RPAREN block
Rule 80    anon_function_expr -> FUNCTION LPAREN RPAREN NEWLINE block
Rule 81    anon_function_expr -> FUNCTION LPAREN function_argument_list RPAREN block
Rule 82    anon_function_expr -> FUNCTION LPAREN function_argument_list RPAREN NEWLINE block
Rule 83    unary_expr -> MINUS expr
Rule 84    unary_expr -> NOT expr
Rule 85    binary_expr -> expr EQ expr
Rule 86    binary_expr -> expr NE expr
Rule 87    binary_expr -> expr GT expr
Rule 88    binary_expr -> expr GE expr
Rule 89    binary_expr -> expr LT expr
Rule 90    binary_expr -> expr LE expr
Rule 91    binary_expr -> expr PLUS expr
Rule 92    binary_expr -> expr MINUS expr
Rule 93    binary_expr -> expr MUL expr
Rule 94    binary_expr -> expr DIV expr
Rule 95    binary_expr -> expr REGEX expr
Rule 96    binary_expr -> expr AND expr
Rule 97    binary_expr -> expr OR expr
Rule 98    binary_expr -> expr NOT expr
Rule 99    binary_expr -> expr MOD expr
Rule 100   command -> command_item
Rule 101   command -> command_item parameter_list
Rule 102   command -> command_item PIPE command
Rule 103   command -> command_item parameter_list PIPE command
Rule 104   command_item -> LIST
Rule 105   command_item -> NUMBER
Rule 106   command_item -> UP
Rule 107   command_item -> symbol
Rule 108   command_item -> COPEN expr RBRACE
Rule 109   command_item -> STRING
Rule 110   parameter_list -> parameter
Rule 111   parameter_list -> parameter parameter_list
Rule 112   parameter -> set_parameter
Rule 113   parameter -> binary_parameter
Rule 114   parameter -> error
Rule 115   set_parameter -> unary_parameter
Rule 116   set_parameter -> unary_parameter COMMA set_parameter
Rule 117   set_parameter -> unary_parameter COMMA error
Rule 118   unary_parameter -> symbol
Rule 119   unary_parameter -> literal
Rule 120   unary_parameter -> array_literal
Rule 121   unary_parameter -> dict_literal
Rule 122   unary_parameter -> COPEN expr RBRACE
Rule 123   unary_parameter -> LIST
Rule 124   unary_parameter -> UP
Rule 125   binary_parameter -> ATOM ASSIGN parameter
Rule 126   binary_parameter -> ATOM EQ parameter
Rule 127   binary_parameter -> ATOM NE parameter
Rule 128   binary_parameter -> ATOM GT parameter
Rule 129   binary_parameter -> ATOM GE parameter
Rule 130   binary_parameter -> ATOM LT parameter
Rule 131   binary_parameter -> ATOM LE parameter
Rule 132   binary_parameter -> ATOM REGEX parameter
Rule 133   binary_parameter -> ATOM INC parameter
Rule 134   binary_parameter -> ATOM DEC parameter
Rule 135   shell -> SHELL
Rule 136   shell -> SHELL parameter_list

Terminals, with rules where they appear

AND                  : 96
ASSIGN               : 28 29 125
ATOM                 : 6 25 26 26 28 30 31 32 33 34 35 39 73 74 75 125 126 127 128 129 130 131 132 133 134
BINNUMBER            : 67
BREAK                : 38
COLON                : 62 63 64
COMMA                : 26 35 41 61 116 117
COPEN                : 53 108 122
DEC                  : 134
DIV                  : 94
ELSE                 : 24
EOPEN                : 54
EQ                   : 85 126
FALSE                : 71
FOR                  : 25 26
FUNCTION             : 30 31 32 33 79 80 81 82
GE                   : 88 129
GT                   : 87 128
HEXNUMBER            : 66
IF                   : 23 24
IN                   : 25 26
INC                  : 133
LBRACE               : 19 20 21 22 57 58 59
LBRACKET             : 55 56 76 77 78
LE                   : 90 131
LIST                 : 104 123
LPAREN               : 23 24 25 26 27 30 31 32 33 52 74 75 79 80 81 82
LT                   : 89 130
MINUS                : 83 92
MOD                  : 99
MUL                  : 93
NE                   : 86 127
NEWLINE              : 2 3 4 20 21 32 33 58 63 64 64 80 82
NOT                  : 84 98
NULL                 : 72
NUMBER               : 65 105
OCTNUMBER            : 68
OR                   : 97
PIPE                 : 102 103
PLUS                 : 91
RBRACE               : 19 20 21 22 53 57 58 59 108 122
RBRACKET             : 55 56 76 77 78
REDIRECT             : 6 7
REGEX                : 95 132
RETURN               : 36 37
RPAREN               : 23 24 25 26 27 30 31 32 33 52 54 74 75 79 80 81 82
SHELL                : 135 136
STRING               : 7 69 109
TRUE                 : 70
UNDEF                : 39
UP                   : 106 124
WHILE                : 27
error                : 114 117

Nonterminals, with rules where they appear

anon_function_expr   : 50
array_literal        : 44 120
assignment_stmt      : 11
binary_expr          : 47
binary_parameter     : 113
block                : 23 24 24 25 26 27 30 31 32 33 79 80 81 82
break_stmt           : 14
call                 : 17 48
command              : 16 54 102 103
command_item         : 100 101 102 103
dict_literal         : 45 121
dict_pair            : 60 61
dict_pair_list       : 59 61
expr                 : 23 24 25 26 27 28 29 37 40 41 52 53 62 62 63 63 64 64 76 77 78 78 83 84 85 85 86 86 87 87 88 88 89 89 90 90 91 91 92 92 93 93 94 94 95 95 96 96 97 97 98 98 99 99 108 122
expr_expansion       : 51
expr_list            : 41 56 75
for_stmt             : 9
function_argument_list : 31 33 35 81 82
function_definition_stmt : 12
if_stmt              : 8
literal              : 43 119
parameter            : 110 111 125 126 127 128 129 130 131 132 133 134
parameter_list       : 101 103 111 136
return_stmt          : 13
set_parameter        : 112 116
shell                : 18
stmt                 : 5 6 7
stmt_list            : 3 4 19 20 0
stmt_redirect        : 1 2 3
subscript_expr       : 49
subscript_left       : 29 76
symbol               : 42 77 107 118
unary_expr           : 46
unary_parameter      : 115 116 117
undef_stmt           : 15
while_stmt           : 10

Parsing method: LALR

state 0

    (0) S' -> . stmt_list
    (1) stmt_list -> . stmt_redirect
    (2) stmt_list -> . stmt_redirect NEWLINE
    (3) stmt_list -> . stmt_redirect NEWLINE stmt_list
    (4) stmt_list -> . NEWLINE stmt_list
    (5) stmt_redirect -> . stmt
    (6) stmt_redirect -> . stmt REDIRECT ATOM
    (7) stmt_redirect -> . stmt REDIRECT STRING
    (8) stmt -> . if_stmt
    (9) stmt -> . for_stmt
    (10) stmt -> . while_stmt
    (11) stmt -> . assignment_stmt
    (12) stmt -> . function_definition_stmt
    (13) stmt -> . return_stmt
    (14) stmt -> . break_stmt
    (15) stmt -> . undef_stmt
    (16) stmt -> . command
    (17) stmt -> . call
    (18) stmt -> . shell
    (23) if_stmt -> . IF LPAREN expr RPAREN block
    (24) if_stmt -> . IF LPAREN expr RPAREN block ELSE block
    (25) for_stmt -> . FOR LPAREN ATOM IN expr RPAREN block
    (26) for_stmt -> . FOR LPAREN ATOM COMMA ATOM IN expr RPAREN block
    (27) while_stmt -> . WHILE LPAREN expr RPAREN block
    (28) assignment_stmt -> . ATOM ASSIGN expr
    (29) assignment_stmt -> . subscript_left ASSIGN expr
    (30) function_definition_stmt -> . FUNCTION ATOM LPAREN RPAREN block
    (31) function_definition_stmt -> . FUNCTION ATOM LPAREN function_argument_list RPAREN block
    (32) function_definition_stmt -> . FUNCTION ATOM LPAREN RPAREN NEWLINE block
    (33) function_definition_stmt -> . FUNCTION ATOM LPAREN function_argument_list RPAREN NEWLINE block
    (36) return_stmt -> . RETURN
    (37) return_stmt -> . RETURN expr
    (38) break_stmt -> . BREAK
    (39) undef_stmt -> . UNDEF ATOM
    (100) command -> . command_item
    (101) command -> . command_item parameter_list
    (102) command -> . command_item PIPE command
    (103) command -> . command_item parameter_list PIPE command
    (74) call -> . ATOM LPAREN RPAREN
    (75) call -> . ATOM LPAREN expr_list RPAREN
    (135) shell -> . SHELL
    (136) shell -> . SHELL parameter_list
    (76) subscript_left -> . subscript_left LBRACKET expr RBRACKET
    (77) subscript_left -> . symbol LBRACKET expr RBRACKET
    (104) command_item -> . LIST
    (105) command_item -> . NUMBER
    (106) command_item -> . UP
    (107) command_item -> . symbol
    (108) command_item -> . COPEN expr RBRACE
    (109) command_item -> . STRING
    (73) symbol -> . ATOM

    NEWLINE         shift and go to state 22
    IF              shift and go to state 13
    FOR             shift and go to state 28
    WHILE           shift and go to state 30
    ATOM            shift and go to state 11
    FUNCTION        shift and go to state 27
    RETURN          shift and go to state 3
    BREAK           shift and go to state 32
    UNDEF           shift and go to state 16
    SHELL           shift and go to state 15
    LIST            shift and go to state 8
    NUMBER          shift and go to state 26
    UP              shift and go to state 7
    COPEN           shift and go to state 31
    STRING          shift and go to state 19

    command_item                   shift and go to state 18
    shell                          shift and go to state 1
    for_stmt                       shift and go to state 2
    break_stmt                     shift and go to state 4
    if_stmt                        shift and go to state 20
    command                        shift and go to state 21
    stmt_redirect                  shift and go to state 6
    undef_stmt                     shift and go to state 5
    stmt                           shift and go to state 23
    symbol                         shift and go to state 24
    call                           shift and go to state 9
    subscript_left                 shift and go to state 10
    stmt_list                      shift and go to state 25
    while_stmt                     shift and go to state 12
    assignment_stmt                shift and go to state 29
    return_stmt                    shift and go to state 14
    function_definition_stmt       shift and go to state 17

state 1

    (18) stmt -> shell .

    REDIRECT        reduce using rule 18 (stmt -> shell .)
    NEWLINE         reduce using rule 18 (stmt -> shell .)
    RBRACE          reduce using rule 18 (stmt -> shell .)
    $end            reduce using rule 18 (stmt -> shell .)


state 2

    (9) stmt -> for_stmt .

    REDIRECT        reduce using rule 9 (stmt -> for_stmt .)
    NEWLINE         reduce using rule 9 (stmt -> for_stmt .)
    RBRACE          reduce using rule 9 (stmt -> for_stmt .)
    $end            reduce using rule 9 (stmt -> for_stmt .)


state 3

    (36) return_stmt -> RETURN .
    (37) return_stmt -> RETURN . expr
    (42) expr -> . symbol
    (43) expr -> . literal
    (44) expr -> . array_literal
    (45) expr -> . dict_literal
    (46) expr -> . unary_expr
    (47) expr -> . binary_expr
    (48) expr -> . call
    (49) expr -> . subscript_expr
    (50) expr -> . anon_function_expr
    (51) expr -> . expr_expansion
    (52) expr -> . LPAREN expr RPAREN
    (53) expr -> . COPEN expr RBRACE
    (73) symbol -> . ATOM
    (65) literal -> . NUMBER
    (66) literal -> . HEXNUMBER
    (67) literal -> . BINNUMBER
    (68) literal -> . OCTNUMBER
    (69) literal -> . STRING
    (70) literal -> . TRUE
    (71) literal -> . FALSE
    (72) literal -> . NULL
    (55) array_literal -> . LBRACKET RBRACKET
    (56) array_literal -> . LBRACKET expr_list RBRACKET
    (57) dict_literal -> . LBRACE RBRACE
    (58) dict_literal -> . LBRACE NEWLINE RBRACE
    (59) dict_literal -> . LBRACE dict_pair_list RBRACE
    (83) unary_expr -> . MINUS expr
    (84) unary_expr -> . NOT expr
    (85) binary_expr -> . expr EQ expr
    (86) binary_expr -> . expr NE expr
    (87) binary_expr -> . expr GT expr
    (88) binary_expr -> . expr GE expr
    (89) binary_expr -> . expr LT expr
    (90) binary_expr -> . expr LE expr
    (91) binary_expr -> . expr PLUS expr
    (92) binary_expr -> . expr MINUS expr
    (93) binary_expr -> . expr MUL expr
    (94) binary_expr -> . expr DIV expr
    (95) binary_expr -> . expr REGEX expr
    (96) binary_expr -> . expr AND expr
    (97) binary_expr -> . expr OR expr
    (98) binary_expr -> . expr NOT expr
    (99) binary_expr -> . expr MOD expr
    (74) call -> . ATOM LPAREN RPAREN
    (75) call -> . ATOM LPAREN expr_list RPAREN
    (78) subscript_expr -> . expr LBRACKET expr RBRACKET
    (79) anon_function_expr -> . FUNCTION LPAREN RPAREN block
    (80) anon_function_expr -> . FUNCTION LPAREN RPAREN NEWLINE block
    (81) anon_function_expr -> . FUNCTION LPAREN function_argument_list RPAREN block
    (82) anon_function_expr -> . FUNCTION LPAREN function_argument_list RPAREN NEWLINE block
    (54) expr_expansion -> . EOPEN command RPAREN

    REDIRECT        reduce using rule 36 (return_stmt -> RETURN .)
    NEWLINE         reduce using rule 36 (return_stmt -> RETURN .)
    RBRACE          reduce using rule 36 (return_stmt -> RETURN .)
    $end            reduce using rule 36 (return_stmt -> RETURN .)
    LPAREN          shift and go to state 35
    COPEN           shift and go to state 60
    ATOM            shift and go to state 38
    NUMBER          shift and go to state 43
    HEXNUMBER       shift and go to state 57
    BINNUMBER       shift and go to state 58
    OCTNUMBER       shift and go to state 54
    STRING          shift and go to state 44
    TRUE            shift and go to state 46
    FALSE           shift and go to state 51
    NULL            shift and go to state 56
    LBRACKET        shift and go to state 52
    LBRACE          shift and go to state 47
    MINUS           shift and go to state 40
    NOT             shift and go to state 45
    FUNCTION        shift and go to state 53
    EOPEN           shift and go to state 55

    binary_expr                    shift and go to state 33
    expr_expansion                 shift and go to state 39
    literal                        shift and go to state 34
    expr                           shift and go to state 48
    array_literal                  shift and go to state 49
    subscript_expr                 shift and go to state 59
    symbol                         shift and go to state 50
    anon_function_expr             shift and go to state 41
    call                           shift and go to state 36
    dict_literal                   shift and go to state 37
    unary_expr                     shift and go to state 42

state 4

    (14) stmt -> break_stmt .

    REDIRECT        reduce using rule 14 (stmt -> break_stmt .)
    NEWLINE         reduce using rule 14 (stmt -> break_stmt .)
    RBRACE          reduce using rule 14 (stmt -> break_stmt .)
    $end            reduce using rule 14 (stmt -> break_stmt .)


state 5

    (15) stmt -> undef_stmt .

    REDIRECT        reduce using rule 15 (stmt -> undef_stmt .)
    NEWLINE         reduce using rule 15 (stmt -> undef_stmt .)
    RBRACE          reduce using rule 15 (stmt -> undef_stmt .)
    $end            reduce using rule 15 (stmt -> undef_stmt .)


state 6

    (1) stmt_list -> stmt_redirect .
    (2) stmt_list -> stmt_redirect . NEWLINE
    (3) stmt_list -> stmt_redirect . NEWLINE stmt_list

    $end            reduce using rule 1 (stmt_list -> stmt_redirect .)
    RBRACE          reduce using rule 1 (stmt_list -> stmt_redirect .)
    NEWLINE         shift and go to state 61


state 7

    (106) command_item -> UP .

    PIPE            reduce using rule 106 (command_item -> UP .)
    error           reduce using rule 106 (command_item -> UP .)
    ATOM            reduce using rule 106 (command_item -> UP .)
    COPEN           reduce using rule 106 (command_item -> UP .)
    LIST            reduce using rule 106 (command_item -> UP .)
    UP              reduce using rule 106 (command_item -> UP .)
    NUMBER          reduce using rule 106 (command_item -> UP .)
    HEXNUMBER       reduce using rule 106 (command_item -> UP .)
    BINNUMBER       reduce using rule 106 (command_item -> UP .)
    OCTNUMBER       reduce using rule 106 (command_item -> UP .)
    STRING          reduce using rule 106 (command_item -> UP .)
    TRUE            reduce using rule 106 (command_item -> UP .)
    FALSE           reduce using rule 106 (command_item -> UP .)
    NULL            reduce using rule 106 (command_item -> UP .)
    LBRACKET        reduce using rule 106 (command_item -> UP .)
    LBRACE          reduce using rule 106 (command_item -> UP .)
    REDIRECT        reduce using rule 106 (command_item -> UP .)
    NEWLINE         reduce using rule 106 (command_item -> UP .)
    $end            reduce using rule 106 (command_item -> UP .)
    RBRACE          reduce using rule 106 (command_item -> UP .)
    RPAREN          reduce using rule 106 (command_item -> UP .)


state 8

    (104) command_item -> LIST .

    PIPE            reduce using rule 104 (command_item -> LIST .)
    error           reduce using rule 104 (command_item -> LIST .)
    ATOM            reduce using rule 104 (command_item -> LIST .)
    COPEN           reduce using rule 104 (command_item -> LIST .)
    LIST            reduce using rule 104 (command_item -> LIST .)
    UP              reduce using rule 104 (command_item -> LIST .)
    NUMBER          reduce using rule 104 (command_item -> LIST .)
    HEXNUMBER       reduce using rule 104 (command_item -> LIST .)
    BINNUMBER       reduce using rule 104 (command_item -> LIST .)
    OCTNUMBER       reduce using rule 104 (command_item -> LIST .)
    STRING          reduce using rule 104 (command_item -> LIST .)
    TRUE            reduce using rule 104 (command_item -> LIST .)
    FALSE           reduce using rule 104 (command_item -> LIST .)
    NULL            reduce using rule 104 (command_item -> LIST .)
    LBRACKET        reduce using rule 104 (command_item -> LIST .)
    LBRACE          reduce using rule 104 (command_item -> LIST .)
    REDIRECT        reduce using rule 104 (command_item -> LIST .)
    NEWLINE         reduce using rule 104 (command_item -> LIST .)
    $end            reduce using rule 104 (command_item -> LIST .)
    RBRACE          reduce using rule 104 (command_item -> LIST .)
    RPAREN          reduce using rule 104 (command_item -> LIST .)


state 9

    (17) stmt -> call .

    REDIRECT        reduce using rule 17 (stmt -> call .)
    NEWLINE         reduce using rule 17 (stmt -> call .)
    RBRACE          reduce using rule 17 (stmt -> call .)
    $end            reduce using rule 17 (stmt -> call .)


state 10

    (29) assignment_stmt -> subscript_left . ASSIGN expr
    (76) subscript_left -> subscript_left . LBRACKET expr RBRACKET

    ASSIGN          shift and go to state 62
    LBRACKET        shift and go to state 63


state 11

    (28) assignment_stmt -> ATOM . ASSIGN expr
    (74) call -> ATOM . LPAREN RPAREN
    (75) call -> ATOM . LPAREN expr_list RPAREN
    (73) symbol -> ATOM .

    ASSIGN          shift and go to state 65
    LPAREN          shift and go to state 64
    LBRACKET        reduce using rule 73 (symbol -> ATOM .)
    PIPE            reduce using rule 73 (symbol -> ATOM .)
    error           reduce using rule 73 (symbol -> ATOM .)
    ATOM            reduce using rule 73 (symbol -> ATOM .)
    COPEN           reduce using rule 73 (symbol -> ATOM .)
    LIST            reduce using rule 73 (symbol -> ATOM .)
    UP              reduce using rule 73 (symbol -> ATOM .)
    NUMBER          reduce using rule 73 (symbol -> ATOM .)
    HEXNUMBER       reduce using rule 73 (symbol -> ATOM .)
    BINNUMBER       reduce using rule 73 (symbol -> ATOM .)
    OCTNUMBER       reduce using rule 73 (symbol -> ATOM .)
    STRING          reduce using rule 73 (symbol -> ATOM .)
    TRUE            reduce using rule 73 (symbol -> ATOM .)
    FALSE           reduce using rule 73 (symbol -> ATOM .)
    NULL            reduce using rule 73 (symbol -> ATOM .)
    LBRACE          reduce using rule 73 (symbol -> ATOM .)
    REDIRECT        reduce using rule 73 (symbol -> ATOM .)
    NEWLINE         reduce using rule 73 (symbol -> ATOM .)
    RBRACE          reduce using rule 73 (symbol -> ATOM .)
    $end            reduce using rule 73 (symbol -> ATOM .)


state 12

    (10) stmt -> while_stmt .

    REDIRECT        reduce using rule 10 (stmt -> while_stmt .)
    NEWLINE         reduce using rule 10 (stmt -> while_stmt .)
    RBRACE          reduce using rule 10 (stmt -> while_stmt .)
    $end            reduce using rule 10 (stmt -> while_stmt .)


state 13

    (23) if_stmt -> IF . LPAREN expr RPAREN block
    (24) if_stmt -> IF . LPAREN expr RPAREN block ELSE block

    LPAREN          shift and go to state 66


state 14

    (13) stmt -> return_stmt .

    REDIRECT        reduce using rule 13 (stmt -> return_stmt .)
    NEWLINE         reduce using rule 13 (stmt -> return_stmt .)
    RBRACE          reduce using rule 13 (stmt -> return_stmt .)
    $end            reduce using rule 13 (stmt -> return_stmt .)


state 15

    (135) shell -> SHELL .
    (136) shell -> SHELL . parameter_list
    (110) parameter_list -> . parameter
    (111) parameter_list -> . parameter parameter_list
    (112) parameter -> . set_parameter
    (113) parameter -> . binary_parameter
    (114) parameter -> . error
    (115) set_parameter -> . unary_parameter
    (116) set_parameter -> . unary_parameter COMMA set_parameter
    (117) set_parameter -> . unary_parameter COMMA error
    (125) binary_parameter -> . ATOM ASSIGN parameter
    (126) binary_parameter -> . ATOM EQ parameter
    (127) binary_parameter -> . ATOM NE parameter
    (128) binary_parameter -> . ATOM GT parameter
    (129) binary_parameter -> . ATOM GE parameter
    (130) binary_parameter -> . ATOM LT parameter
    (131) binary_parameter -> . ATOM LE parameter
    (132) binary_parameter -> . ATOM REGEX parameter
    (133) binary_parameter -> . ATOM INC parameter
    (134) binary_parameter -> . ATOM DEC parameter
    (118) unary_parameter -> . symbol
    (119) unary_parameter -> . literal
    (120) unary_parameter -> . array_literal
    (121) unary_parameter -> . dict_literal
    (122) unary_parameter -> . COPEN expr RBRACE
    (123) unary_parameter -> . LIST
    (124) unary_parameter -> . UP
    (73) symbol -> . ATOM
    (65) literal -> . NUMBER
    (66) literal -> . HEXNUMBER
    (67) literal -> . BINNUMBER
    (68) literal -> . OCTNUMBER
    (69) literal -> . STRING
    (70) literal -> . TRUE
    (71) literal -> . FALSE
    (72) literal -> . NULL
    (55) array_literal -> . LBRACKET RBRACKET
    (56) array_literal -> . LBRACKET expr_list RBRACKET
    (57) dict_literal -> . LBRACE RBRACE
    (58) dict_literal -> . LBRACE NEWLINE RBRACE
    (59) dict_literal -> . LBRACE dict_pair_list RBRACE

    REDIRECT        reduce using rule 135 (shell -> SHELL .)
    NEWLINE         reduce using rule 135 (shell -> SHELL .)
    RBRACE          reduce using rule 135 (shell -> SHELL .)
    $end            reduce using rule 135 (shell -> SHELL .)
    error           shift and go to state 77
    ATOM            shift and go to state 74
    COPEN           shift and go to state 80
    LIST            shift and go to state 76
    UP              shift and go to state 73
    NUMBER          shift and go to state 43
    HEXNUMBER       shift and go to state 57
    BINNUMBER       shift and go to state 58
    OCTNUMBER       shift and go to state 54
    STRING          shift and go to state 44
    TRUE            shift and go to state 46
    FALSE           shift and go to state 51
    NULL            shift and go to state 56
    LBRACKET        shift and go to state 52
    LBRACE          shift and go to state 47

    parameter_list                 shift and go to state 67
    unary_parameter                shift and go to state 79
    parameter                      shift and go to state 68
    binary_parameter               shift and go to state 69
    array_literal                  shift and go to state 70
    set_parameter                  shift and go to state 78
    symbol                         shift and go to state 71
    literal                        shift and go to state 72
    dict_literal                   shift and go to state 75

state 16

    (39) undef_stmt -> UNDEF . ATOM

    ATOM            shift and go to state 81


state 17

    (12) stmt -> function_definition_stmt .

    REDIRECT        reduce using rule 12 (stmt -> function_definition_stmt .)
    NEWLINE         reduce using rule 12 (stmt -> function_definition_stmt .)
    RBRACE          reduce using rule 12 (stmt -> function_definition_stmt .)
    $end            reduce using rule 12 (stmt -> function_definition_stmt .)


state 18

    (100) command -> command_item .
    (101) command -> command_item . parameter_list
    (102) command -> command_item . PIPE command
    (103) command -> command_item . parameter_list PIPE command
    (110) parameter_list -> . parameter
    (111) parameter_list -> . parameter parameter_list
    (112) parameter -> . set_parameter
    (113) parameter -> . binary_parameter
    (114) parameter -> . error
    (115) set_parameter -> . unary_parameter
    (116) set_parameter -> . unary_parameter COMMA set_parameter
    (117) set_parameter -> . unary_parameter COMMA error
    (125) binary_parameter -> . ATOM ASSIGN parameter
    (126) binary_parameter -> . ATOM EQ parameter
    (127) binary_parameter -> . ATOM NE parameter
    (128) binary_parameter -> . ATOM GT parameter
    (129) binary_parameter -> . ATOM GE parameter
    (130) binary_parameter -> . ATOM LT parameter
    (131) binary_parameter -> . ATOM LE parameter
    (132) binary_parameter -> . ATOM REGEX parameter
    (133) binary_parameter -> . ATOM INC parameter
    (134) binary_parameter -> . ATOM DEC parameter
    (118) unary_parameter -> . symbol
    (119) unary_parameter -> . literal
    (120) unary_parameter -> . array_literal
    (121) unary_parameter -> . dict_literal
    (122) unary_parameter -> . COPEN expr RBRACE
    (123) unary_parameter -> . LIST
    (124) unary_parameter -> . UP
    (73) symbol -> . ATOM
    (65) literal -> . NUMBER
    (66) literal -> . HEXNUMBER
    (67) literal -> . BINNUMBER
    (68) literal -> . OCTNUMBER
    (69) literal -> . STRING
    (70) literal -> . TRUE
    (71) literal -> . FALSE
    (72) literal -> . NULL
    (55) array_literal -> . LBRACKET RBRACKET
    (56) array_literal -> . LBRACKET expr_list RBRACKET
    (57) dict_literal -> . LBRACE RBRACE
    (58) dict_literal -> . LBRACE NEWLINE RBRACE
    (59) dict_literal -> . LBRACE dict_pair_list RBRACE

    REDIRECT        reduce using rule 100 (command -> command_item .)
    NEWLINE         reduce using rule 100 (command -> command_item .)
    $end            reduce using rule 100 (command -> command_item .)
    RBRACE          reduce using rule 100 (command -> command_item .)
    RPAREN          reduce using rule 100 (command -> command_item .)
    PIPE            shift and go to state 83
    error           shift and go to state 77
    ATOM            shift and go to state 74
    COPEN           shift and go to state 80
    LIST            shift and go to state 76
    UP              shift and go to state 73
    NUMBER          shift and go to state 43
    HEXNUMBER       shift and go to state 57
    BINNUMBER       shift and go to state 58
    OCTNUMBER       shift and go to state 54
    STRING          shift and go to state 44
    TRUE            shift and go to state 46
    FALSE           shift and go to state 51
    NULL            shift and go to state 56
    LBRACKET        shift and go to state 52
    LBRACE          shift and go to state 47

    parameter_list                 shift and go to state 82
    unary_parameter                shift and go to state 79
    parameter                      shift and go to state 68
    binary_parameter               shift and go to state 69
    array_literal                  shift and go to state 70
    set_parameter                  shift and go to state 78
    symbol                         shift and go to state 71
    literal                        shift and go to state 72
    dict_literal                   shift and go to state 75

state 19

    (109) command_item -> STRING .

    PIPE            reduce using rule 109 (command_item -> STRING .)
    error           reduce using rule 109 (command_item -> STRING .)
    ATOM            reduce using rule 109 (command_item -> STRING .)
    COPEN           reduce using rule 109 (command_item -> STRING .)
    LIST            reduce using rule 109 (command_item -> STRING .)
    UP              reduce using rule 109 (command_item -> STRING .)
    NUMBER          reduce using rule 109 (command_item -> STRING .)
    HEXNUMBER       reduce using rule 109 (command_item -> STRING .)
    BINNUMBER       reduce using rule 109 (command_item -> STRING .)
    OCTNUMBER       reduce using rule 109 (command_item -> STRING .)
    STRING          reduce using rule 109 (command_item -> STRING .)
    TRUE            reduce using rule 109 (command_item -> STRING .)
    FALSE           reduce using rule 109 (command_item -> STRING .)
    NULL            reduce using rule 109 (command_item -> STRING .)
    LBRACKET        reduce using rule 109 (command_item -> STRING .)
    LBRACE          reduce using rule 109 (command_item -> STRING .)
    REDIRECT        reduce using rule 109 (command_item -> STRING .)
    NEWLINE         reduce using rule 109 (command_item -> STRING .)
    $end            reduce using rule 109 (command_item -> STRING .)
    RBRACE          reduce using rule 109 (command_item -> STRING .)
    RPAREN          reduce using rule 109 (command_item -> STRING .)


state 20

    (8) stmt -> if_stmt .

    REDIRECT        reduce using rule 8 (stmt -> if_stmt .)
    NEWLINE         reduce using rule 8 (stmt -> if_stmt .)
    RBRACE          reduce using rule 8 (stmt -> if_stmt .)
    $end            reduce using rule 8 (stmt -> if_stmt .)


state 21

    (16) stmt -> command .

    REDIRECT        reduce using rule 16 (stmt -> command .)
    NEWLINE         reduce using rule 16 (stmt -> command .)
    RBRACE          reduce using rule 16 (stmt -> command .)
    $end            reduce using rule 16 (stmt -> command .)


state 22
